--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 20 01:29:32 PKT 2021
-sdk.dir=C\:\\Users\\sami_pc\\AppData\\Local\\Android\\Sdk
+#Wed May 19 16:05:07 CDT 2021
+sdk.dir=/Users/c1scok1d/Library/Android/sdk
