--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed May 19 16:05:07 CDT 2021
-sdk.dir=C\:\\Users\\sami_pc\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/c1scok1d/Library/Android/sdk
